// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditFilterListHeader renders the header when creating a new filter list with ID, description and items set 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-baseline-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="emotion-euiTextColor-subdued"
        >
          <p>
            15 items in total
          </p>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditFilterListHeader renders the header when creating a new filter list with the ID not set 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-baseline-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="emotion-euiTextColor-subdued"
        >
          <p>
            0 items in total
          </p>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditFilterListHeader renders the header when editing an existing unused filter list with no description or items 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-baseline-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="emotion-euiTextColor-subdued"
        >
          <p>
            0 items in total
          </p>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`EditFilterListHeader renders the header when editing an existing used filter list with description and items set 1`] = `
<div
  class="euiFlexGroup emotion-euiFlexGroup-responsive-l-spaceBetween-baseline-row"
>
  <div
    class="euiFlexItem emotion-euiFlexItem-growZero"
  >
    <div
      class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-baseline-row"
    >
      <div
        class="euiFlexItem emotion-euiFlexItem-growZero"
      >
        <span
          class="emotion-euiTextColor-subdued"
        >
          <p>
            15 items in total
          </p>
        </span>
      </div>
    </div>
  </div>
</div>
`;
